deployment-welcome.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome
  labels:
    app: welcome
spec:
  replicas: 3
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
      - name: welcome
        image: hajeongcheol/welcome:v2
