pod-welcome-v1.yml
apiVersion: v1
kind: Pod
metadata:
  name: welcome 
spec:
  containers:
  - name: welcome 
    image: hajeongcheol/welcome:v1
    ports:
    - containerPort: 80
