pod-welcome-v2.yml
apiVersion: v1
kind: Pod
metadata:
  name: welcome 
spec:
  containers:
  - name: welcome 
    image: hajeongcheol/welcome:v2
    ports:
    - containerPort: 80
