pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: alert
spec:
  containers:
  - name: consumer
    image: hajeongcheol/alert_consumer
  - name: web
    image: hajeongcheol/alert_web
    ports:
      - containerPort: 8084
