pvc-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
    - name: ubuntu
      image: hajeongcheol/ubuntu:latest
      command: ["/bin/sleep", "3650d"]
      volumeMounts:
      - name: pvc-volume
        mountPath: /mnt
  volumes:
  - name: pvc-volume
    persistentVolumeClaim:
      claimName: pvc
