svc-welcome-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome-spring-lb
spec:
  type: LoadBalancer
  selector:
    app: welcome
    release: spring
  ports:
    - name: http
      port : 80
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-summer-lb
spec:
  type: LoadBalancer
  selector:
    app: welcome
    release: summer
  ports:
    - name: http
      port : 80
