svc-welcome-np-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome-v1
spec:
  type: NodePort
  selector:
    app: welcome
    release: v1
  ports:
    - name: http
      port : 80
