svc-welcome-np-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome-v2
spec:
  type: NodePort
  selector:
    app: welcome
    release: v2
  ports:
    - name: http
      port : 80
