svc-welcome-np.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome-spring
spec:
  type: NodePort
  selector:
    app: welcome
    release: spring
  ports:
    - name: http
      port : 80
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-summer
spec:
  type: NodePort
  selector:
    app: welcome
    release: summer
  ports:
    - name: http
      port : 80
