svc-welcome.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome
spec:
  type: ClusterIP
  selector:
    app: welcome
    release: spring
  ports:
    - name: http
      port : 80
